<resources>

    <string name="app_name">Hash</string>
    <string name="num_1">1</string>

    <!-- SBottom Bar Navigation -->
    <string name="menu_item1">Home</string>
    <string name="menu_item2">Suggestion</string>
    <string name="menu_item3">Ingredients</string>
    <string name="menu_item4">Favorite</string>
    <string name="menu_item5">Profile</string>
    <string name="search_hint">Any recipe</string>

    <!-- Fragment 1 -->
    <string name="today_s_special">"Today's Special"</string>

    <!-- Fragment 2 -->
    <string name="peopleCount">"Number of people attending"</string>
    <string name="checkbox1">"willing to purchase"</string>
    <string name="checkbox2">"No egg"</string>
    <string name="checkbox3">"No fish"</string>
    <string name="checkbox4">"No milk"</string>
    <string name="checkbox5">"No peanut"</string>
    <string name="checkbox6">"No shellfish"</string>
    <string name="checkbox7">"No soy"</string>
    <string name="checkbox8">"No tree nuts"</string>
    <string name="checkbox9">"No wheat"</string>
    <string name="search">"Search"</string>

    <!-- Fragment 3 -->
    <string name="food_category1">"Fruits"</string>
    <string name="food_category2">"Vegetables"</string>
    <string name="food_category3">"Protein"</string>
    <string name="food_category4">"Dairy"</string>
    <string name="food_category5">"Grains"</string>
    <string name="food_category6">"Oils"</string>
    <string name="button">"Add"</string>

    <!-- Fragment 5 -->
    <string name="profile">"Profile"</string>
    <string name="greetings">"Welcome,"</string>
    <string name="username">"Guest"</string>
    <string name="status">"Login"</string>
    <string name="retrieve_from_server">"Retrieve Data From Server"</string>
    <string name="upload_to_server">"Upload Data To Server"</string>

    <!-- ViewDish -->
    <string name="cooking_instructions">Cooking instructions</string>
    <string name="menu_name">menuName</string>
    <string name="required_ingredients">Required ingredients</string>

    <!-- AddRecipe -->
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>

    <!-- Login -->
    <string name="login_title">"Sign in"</string>
    <string name="enter_username">"Username"</string>
    <string name="enter_password">"Password"</string>
    <string name="signin">"Sign In"</string>
    <string name="to_signup">"Don't have an account? Sign up."</string>

    <!-- Signup -->
    <string name="signup_title">"Register"</string>
    <string name="set_username">"Username"</string>
    <string name="set_email">"Email"</string>
    <string name="set_password">"Password"</string>
    <string name="register">"Register"</string>
    <string name="to_login">"Already have an account? Login."</string>

</resources>
